--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
       <%= yield %>
       <%= render "layouts/footer" %>
       <%= debug( params ) if Rails.env.development? %>
+      <!--
+      <%= debug( session ) if Rails.env.development? %>
+      -->
     </div>
   </body>
 </html>
