--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,13 @@
       <%= render "layouts/footer" %>
       <%= debug( params ) if Rails.env.development? %>
       <!--
+      <% if Rails.env.development? %>
+        <% request.headers.each do | k, v | %>
+          <%= debug( "#{ k } : #{ v }" ) %>
+        <% end %>
+      <% end %>
+      -->
+      <!--
       <%= debug( session ) if Rails.env.development? %>
       -->
     </div>
