--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -277,3 +277,27 @@ span.picture{
     border: 0;
   }
 }
+
+/* messages */
+.messages{
+  list-style: none;
+  padding: 0;
+  li{
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+    margin-bottom: 20px;
+  }
+  .user{
+    margin-top: 5em;
+    padding-top: 0;
+  }
+  .content{
+    display: block;
+    margin-left: 60px;
+  }
+  .gravatar{
+    float: left;
+    margin-right: 10px;
+    margin-top: 5px;
+  }
+}
