--- a/app/views/users/messages.html.erb
+++ b/app/views/users/messages.html.erb
@@ -14,6 +14,13 @@
     <section class="stats">
       <%= render "shared/stats" %>
     </section>
+    <section class="message">
+      <%= form_for( @message ) do | f | %>
+        <%= f.select :receiver_id, @users.map{ | user | [ user.name, user.id ] }, { include_blank: "== choose user ==" } %>
+        <%= f.text_area :content, placeholder: "Compose new message..." %>
+        <%= f.submit "Send", class: "btn btn-primary" %>
+      <% end %>
+    </section>
   </aside>
   <div class="col-md-8">
     <h3>Messages</h3>
