--- a/app/views/static_pages/_login_user_home.html.erb
+++ b/app/views/static_pages/_login_user_home.html.erb
@@ -9,6 +9,9 @@
     <section class="micropost_form">
       <%= render "shared/micropost_form" %>
     </section>
+    <section class="notification">
+      <%= render "shared/notifications" %>
+    </section>
   </aside>
   <div class="col-md-8">
     <h3>Micropost Feed</h3>
